# mothrag

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
benchmarks/results/: arm-a-flat-rerank.json  arm-b-graphrag.json  arm-c-adaptive-rag.json  arm-d1-anchorrag-single.json  arm-d1l-anchorrag-nothink.json  arm-d2-anchorrag-swarm.json  error_analysis_bgererank.json  ner_cache_hotpot500_50q.json  smoke_decompose_3q.json  smoke_decompose_3q_v2.json  smoke_v3think_3q.json  smoke_v3think_5q.json  soft_em_cache.json  soft_em_cache_gemini.json  sweep_anchor_bias.json  wiki500_2tier_50q.json  wiki500_2tier_bu1.0_50q.json  wiki500_baseline_stmini.json  wiki500_baseline_tfidf.json  wiki500_bm25_promptV2.json  wiki500_decompose_50q.json  wiki500_geminiV2_topk10.json  wiki500_gemini_asym_topk10.json  wiki500_gemini_tasktype_topk10.json  wiki500_gemini_topk10.json  wiki500_magma_l1.0_n5.json  wiki500_selective_ensemble_50q.json  wiki500_selective_v2_50q.json  wiki500_st_beta1.0.json  wiki500_st_beta10.0.json  wiki500_st_beta2.0.json  wiki500_st_beta5.0.json  wiki500_st_topk10.json  wiki500_st_topk10_bgererank.json  wiki500_st_topk10_bgererank_promptV2.json  wiki500_st_topk10_bgererank_v3think.json  wiki500_st_topk10_bgererank_v3think_bu1.0.json  wiki500_st_topk10_magma.json  wiki500_stbase_topk10.json  wiki_2wiki500_best.json  (+2 more)
docs/: index.md
docs/getting-started/: concepts.md  installation.md  quickstart.md
docs/guide/: api.md  hybrid-graph-retrieval.md  loaders.md  multimodal-infobox-retrieval.md  production.md  retry-on-abstain.md  vertex-setup.md
examples/: 00_simple_quickstart.py  01_hotpotqa_eval.py  02_custom_domain.py  quickstart_custom_corpus.ipynb
examples/sample_corpus/: eiffel_tower.txt  nolan_films.json  python_history.md
mothrag/: __init__.py
mothrag/api/: __init__.py  simple.py
mothrag/arms/: __init__.py  base.py  (+3 more)
paper/: REPRODUCE.md
scripts/: acceptance.sh  bootstrap_ci.py  make_benchmark_charts.py  route_prospective.py
tests/: test_abstain_markers.py  test_active_gap_query.py  test_adapter_string_source_hardening.py  test_adaptive_gamma_retrigger.py  test_anchor.py  test_ann_coerce.py  test_arbitrate_default.py  test_arbitrate_subset_plumbing.py  test_arbitration_ablation_flags.py  test_arbitrator_v2.py  test_arm_applicability.py  test_arms_infobox.py  test_arms_runner.py  test_bridge_haiku_ann_integration.py  test_bridge_haiku_arm.py  test_bridge_haiku_arm_integration.py  test_bridge_haiku_judge_pit.py  test_bridge_haiku_llm_modules.py  test_bridge_haiku_pit_fusion.py  test_bridge_prompt_variants.py  test_bug_pattern.py  test_c1_integration.py  test_chain_filter.py  test_chainfilter_cohort_gate.py  test_cli_flag_wiring.py  test_compare_arm.py  test_compound_paths.py  test_conservative_gating.py  test_decompose.py  test_decompose_arm_v2.py  test_dup_arm_pool.py  test_ensemble_arbitrate.py  test_entry_points.py  test_faithfulness_gamma_coord.py  test_gamma_aware_bridge_cohort.py  test_gamma_aware_integration.py  test_gamma_aware_pdd.py  test_gamma_l4b_andgate.py  test_gamma_source_key_fix.py  test_gemini_embedding_corpus_routing.py  (+56 more)
(+142 files in other folders)
